--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="img-container">
+        <div class="img"></div>
+        <div class="author"></div>
+    </div>
 
-    <div class="btn"> <button>Get new quote</button></div>
-    <div class="quote"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
     
