--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="img-container">
-        <div class="img"></div>
-        <div class="author"></div>
-    </div>
-
+<div class="pictures"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="script.js"></script>
     
